--- a/#source/scss/cottage.scss
+++ b/#source/scss/cottage.scss
@@ -41,7 +41,7 @@ body{
     }
   &__section{
     background-color: #fff;
-    background-image: url(/img/cottage/bg-image.png);
+    background-image: url(../img/cottage/bg-image.png);
     background-position: 100% 50%;
     background-repeat: no-repeat;
 }
@@ -237,7 +237,7 @@ body{
   &__list{
     margin: 0;
     padding-inline-start: 28px;
-    list-style-image: url(/img/cottage/check.svg);
+    list-style-image: url(../img/cottage/check.svg);
     li{
         padding-bottom: 16px;
     }
@@ -252,39 +252,39 @@ body{
     padding-top: 200px;
   }
   & &__cards &__item-1{
-      background-image: url(/img/cottage/buildings/image4.png);
+      background-image: url(../img/cottage/buildings/image4.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-2{
-      background-image: url(/img/cottage/buildings/image8.png);
+      background-image: url(../img/cottage/buildings/image8.png);
       background-repeat: no-repeat;
   }
       & &__cards &__item-3{
-      background-image: url(/img/cottage/buildings/image7.png);
+      background-image: url(../img/cottage/buildings/image7.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-4{
-      background-image: url(/img/cottage/buildings/image9.png);
+      background-image: url(../img/cottage/buildings/image9.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-5{
-      background-image: url(/img/cottage/buildings/image6.png);
+      background-image: url(../img/cottage/buildings/image6.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-6{
-      background-image: url(/img/cottage/buildings/image5.png);
+      background-image: url(../img/cottage/buildings/image5.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-7{
-      background-image: url(/img/cottage/buildings/image.jpg);
+      background-image: url(../img/cottage/buildings/image.jpg);
       background-repeat: no-repeat;
   }
   & &__cards &__item-8{
-      background-image: url(/img/cottage/buildings/image3.png);
+      background-image: url(../img/cottage/buildings/image3.png);
       background-repeat: no-repeat;
   }
   & &__cards &__item-9{
-      background-image: url(/img/cottage/buildings/image2.jpg);
+      background-image: url(../img/cottage/buildings/image2.jpg);
       background-repeat: no-repeat;
   }
 }
