--- a/#source/scss/news.scss
+++ b/#source/scss/news.scss
@@ -20,7 +20,7 @@ body{
 }
 .description {
     &__section{
-      background-image: url(/img/news/image-cover.png);
+      background-image: url(../img/news/image-cover.png);
       background-repeat: no-repeat;
       background-position: 100%;
     }
