--- a/#source/scss/projects.scss
+++ b/#source/scss/projects.scss
@@ -45,15 +45,15 @@
         gap: 29.9px;
         padding-bottom: 80px;
         .projects__item-1{
-            background-image: url(/img/main/image.jpg);
+            background-image: url(../img/main/image.jpg);
             background-repeat: no-repeat;
         }
         .projects__item-2{
-            background-image: url(/img/main/image2.jpg);
+            background-image: url(../img/main/image2.jpg);
             background-repeat: no-repeat;
         }
         .projects__item-3{
-            background-image: url(/img/main/image3.png);
+            background-image: url(../img/main/image3.png);
             background-repeat: no-repeat;
         }
         .projects__item-1,
