--- a/#source/scss/services.scss
+++ b/#source/scss/services.scss
@@ -35,7 +35,7 @@ body{
 }
 
 .description__section{
-  background-image: url(/img/services/desc__bg.png);
+  background-image: url(../img/services/desc__bg.png);
   background-position: 104% 50%;
   background-repeat: no-repeat;
 }
