--- a/#source/scss/work.scss
+++ b/#source/scss/work.scss
@@ -52,7 +52,7 @@ body{
   }
 }
 .description__section{
-    background-image: url(/img/work/bg-desc.png);
+    background-image: url(../img/work/bg-desc.png);
     background-position: 103% 50%;
     background-size: contain;
     background-repeat: no-repeat;
@@ -71,39 +71,39 @@ body{
         padding-bottom: 60px;
     }
         & &__cards &__item-1{
-        background-image: url(/img/work/image\(7\).png);
+        background-image: url(../img/work/image\(7\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-2{
-        background-image: url(/img/work/image\(8\).png);
+        background-image: url(../img/work/image\(8\).png);
         background-repeat: no-repeat;
     }
         & &__cards &__item-3{
-        background-image: url(/img/work/image\(1\).png);
+        background-image: url(../img/work/image\(1\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-4{
-        background-image: url(/img/work/image\(2\).png);
+        background-image: url(../img/work/image\(2\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-5{
-        background-image: url(/img/work/image\(3\).png);
+        background-image: url(../img/work/image\(3\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-6{
-        background-image: url(/img/work/image.png);
+        background-image: url(../img/work/image.png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-7{
-        background-image: url(/img/work/image\(4\).png);
+        background-image: url(../img/work/image\(4\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-8{
-        background-image: url(/img/work/image\(5\).png);
+        background-image: url(../img/work/image\(5\).png);
         background-repeat: no-repeat;
     }
     & &__cards &__item-9{
-        background-image: url(/img/work/image\(6\).png);
+        background-image: url(../img/work/image\(6\).png);
         background-repeat: no-repeat;
     }
     & &__view{
