--- a/css/news.css
+++ b/css/news.css
@@ -518,7 +518,7 @@ body {
 }
 
 .description__section {
-  background-image: url(/img/news/image-cover.png);
+  background-image: url(../img/news/image-cover.png);
   background-repeat: no-repeat;
   background-position: 100%;
 }
