--- a/css/style.css
+++ b/css/style.css
@@ -615,15 +615,15 @@
   padding-bottom: 80px;
 }
 .projects .projects__cards .projects__item-1 {
-  background-image: url(/img/main/image.jpg);
+  background-image: url(../img/main/image.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-2 {
-  background-image: url(/img/main/image2.jpg);
+  background-image: url(../img/main/image2.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-3 {
-  background-image: url(/img/main/image3.png);
+  background-image: url(../img/main/image3.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-1,
