--- a/#source/scss/contacts.scss
+++ b/#source/scss/contacts.scss
@@ -21,7 +21,7 @@ body{
 }
 .description {
   &__section{
-    background-image: url(/img/contacts/image-cover.png);
+    background-image: url(../img/contacts/image-cover.png);
     background-repeat: no-repeat;
     background-position: 100%;
 }
