--- a/#source/scss/positions.scss
+++ b/#source/scss/positions.scss
@@ -25,7 +25,7 @@ body{
 }
 .description {
   &__section{
-    background-image: url(/img/positions/image.png);
+    background-image: url(../img/positions/image.png);
     background-repeat: no-repeat;
     background-position: 100%;
 }
