--- a/css/interior__design.css
+++ b/css/interior__design.css
@@ -559,15 +559,15 @@
   padding-bottom: 80px;
 }
 .projects .projects__cards .projects__item-1 {
-  background-image: url(/img/main/image.jpg);
+  background-image: url(../img/main/image.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-2 {
-  background-image: url(/img/main/image2.jpg);
+  background-image: url(../img/main/image2.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-3 {
-  background-image: url(/img/main/image3.png);
+  background-image: url(../img/main/image3.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-1,
@@ -852,7 +852,7 @@ body {
 }
 
 .description__section {
-  background-image: url(/img/interior__design/bg-image.png);
+  background-image: url(../img/interior__design/bg-image.png);
   background-position: 103% 50%;
   background-repeat: no-repeat;
 }
@@ -879,11 +879,11 @@ body {
   line-height: 60px;
 }
 .offer__adv .minus {
-  list-style-image: url(/img/interior__design/Minus.png);
+  list-style-image: url(../img/interior__design/Minus.png);
   margin: 0;
 }
 .offer__adv .plus {
-  list-style-image: url(/img/interior__design/Plus.png);
+  list-style-image: url(../img/interior__design/Plus.png);
   margin: 0;
 }
 .offer__subtitle {
@@ -975,39 +975,39 @@ body {
   padding: 180px 0 100px 0;
 }
 .projects .projects__cards .projects__item-1 {
-  background-image: url(/img/interior__design/buildings/image6.png);
+  background-image: url(../img/interior__design/buildings/image6.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-2 {
-  background-image: url(/img/interior__design/buildings/image5.png);
+  background-image: url(../img/interior__design/buildings/image5.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-3 {
-  background-image: url(/img/interior__design/buildings/image7.png);
+  background-image: url(../img/interior__design/buildings/image7.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-4 {
-  background-image: url(/img/interior__design/buildings/image9.png);
+  background-image: url(../img/interior__design/buildings/image9.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-5 {
-  background-image: url(/img/interior__design/buildings/image8.png);
+  background-image: url(../img/interior__design/buildings/image8.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-6 {
-  background-image: url(/img/interior__design/buildings/image4.png);
+  background-image: url(../img/interior__design/buildings/image4.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-7 {
-  background-image: url(/img/interior__design/buildings/image.jpg);
+  background-image: url(../img/interior__design/buildings/image.jpg);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-8 {
-  background-image: url(/img/interior__design/buildings/image3.png);
+  background-image: url(../img/interior__design/buildings/image3.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-9 {
-  background-image: url(/img/interior__design/buildings/image2.jpg);
+  background-image: url(../img/interior__design/buildings/image2.jpg);
   background-repeat: no-repeat;
 }
 
@@ -1025,7 +1025,7 @@ body {
   top: -12%;
   left: -5%;
   z-index: -1;
-  background-image: url(/img/main/facts_bg-image.png);
+  background-image: url(../img/main/facts_bg-image.png);
   background-repeat: no-repeat;
   -webkit-transform: rotate(3deg);
           transform: rotate(3deg);
