--- a/css/positions.css
+++ b/css/positions.css
@@ -579,7 +579,7 @@ body {
 }
 
 .description__section {
-  background-image: url(/img/positions/image.png);
+  background-image: url(../img/positions/image.png);
   background-repeat: no-repeat;
   background-position: 100%;
 }
