--- a/css/services.css
+++ b/css/services.css
@@ -468,7 +468,7 @@ body {
 }
 
 .description__section {
-  background-image: url(/img/services/desc__bg.png);
+  background-image: url(../img/services/desc__bg.png);
   background-position: 104% 50%;
   background-repeat: no-repeat;
 }
