--- a/css/work.css
+++ b/css/work.css
@@ -761,6 +761,10 @@
   line-height: 48px;
 }
 
+.communication__back {
+  background: url(../../img/main/communication.jpg);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -817,7 +821,7 @@ body {
 }
 
 .description__section {
-  background-image: url(../img/work/bg-desc.png);
+  background-image: url(../../img/work/bg-desc.png);
   background-position: 103% 50%;
   background-size: contain;
   background-repeat: no-repeat;
@@ -834,39 +838,39 @@ body {
   padding-bottom: 60px;
 }
 .projects .projects__cards .projects__item-1 {
-  background-image: url(../img/work/image\(7\).png);
+  background-image: url(../../img/work/image\(7\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-2 {
-  background-image: url(../img/work/image\(8\).png);
+  background-image: url(../../img/work/image\(8\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-3 {
-  background-image: url(../img/work/image\(1\).png);
+  background-image: url(../../img/work/image\(1\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-4 {
-  background-image: url(../img/work/image\(2\).png);
+  background-image: url(../../img/work/image\(2\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-5 {
-  background-image: url(../img/work/image\(3\).png);
+  background-image: url(../../img/work/image\(3\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-6 {
-  background-image: url(../img/work/image.png);
+  background-image: url(../../img/work/image.png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-7 {
-  background-image: url(../img/work/image\(4\).png);
+  background-image: url(../../img/work/image\(4\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-8 {
-  background-image: url(../img/work/image\(5\).png);
+  background-image: url(../../img/work/image\(5\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__cards .projects__item-9 {
-  background-image: url(../img/work/image\(6\).png);
+  background-image: url(../../img/work/image\(6\).png);
   background-repeat: no-repeat;
 }
 .projects .projects__view {
