--- a/css/style.css
+++ b/css/style.css
@@ -1029,6 +1029,10 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.construction__bureau .bureau .bureau__video .youtube__link:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
 .construction__bureau .bureau .bureau__video .bureau__circle {
   position: absolute;
   display: -webkit-box;
