--- a/#source/scss/contacts.scss
+++ b/#source/scss/contacts.scss
@@ -40,6 +40,7 @@ body{
       display: flex;
       align-items: start;
       label{
+        cursor: pointer;
         width: 287px;
       }
       input[type=checkbox]{
@@ -98,11 +99,11 @@ body{
     flex-direction: column;
     gap: 8px;
     label{
-        @include fonts(400,14px,21px);
+      @include fonts(400,16px,25.6px);
     }
     input, select, textarea{
-        @include fonts(400,14px,21px);
-        font-family: Ubuntu, sans-serif;
+      @include fonts(400,16px,25.6px);
+      font-family: Ubuntu, sans-serif;
     }
     input[type=text],input[type=tel],input[type=email], select, textarea{
         background-color: #F4F5F6;
@@ -111,7 +112,7 @@ body{
         padding: 11px;
     }
     select{
-      padding: 12.5px;
+      padding: 13.5px;
     }
     textarea{
       min-width: 120px;
@@ -123,14 +124,50 @@ body{
   }
 }
 .radio {
+  &{
+    position: relative;
+    padding-left: 24px;
+    input[type="radio"]{
+      display: none;
+      &:checked ~ span::after{
+        transform: translate(-50%, -50%); scale: 1;
+      }
+    }
+    span{
+      height: 14px;
+      width: 14px;
+      border-radius: 50%;
+      border: 2px solid #FF5A30;
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 4px;
+      &:after{
+        content: "";
+        height: 8px;
+        width: 8px;
+        background-color: #FF5A30;
+        
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        border-radius: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        transition: 0.3s ease-in-out 0s;
+      }
+    }
+  }
   &__box{
     display: flex;
     align-items: center;
     input[type=radio]{
-      margin: 0 12px 0 0;
+      margin: 0 10px 0 0;
     }
     label{
-      padding-right: 24px;
+      padding-right: 20px;
+      font-family: Ubuntu, sans-serif;
+      @include fonts(400,16px,25.6px);
+      cursor: pointer;
     }
     label:last-child{
       padding-right: 0px;
