--- a/css/contacts.css
+++ b/css/contacts.css
@@ -602,6 +602,7 @@ body {
           align-items: start;
 }
 .contacts__box .check label {
+  cursor: pointer;
   width: 287px;
 }
 .contacts__box .check input[type=checkbox] {
@@ -674,14 +675,14 @@ body {
   gap: 8px;
 }
 .form__box label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 25.6px;
 }
 .form__box input, .form__box select, .form__box textarea {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 25.6px;
   font-family: Ubuntu, sans-serif;
 }
 .form__box input[type=text], .form__box input[type=tel], .form__box input[type=email], .form__box select, .form__box textarea {
@@ -691,7 +692,7 @@ body {
   padding: 11px;
 }
 .form__box select {
-  padding: 12.5px;
+  padding: 13.5px;
 }
 .form__box textarea {
   min-width: 120px;
@@ -701,6 +702,42 @@ body {
   width: 576px;
 }
 
+.radio {
+  position: relative;
+  padding-left: 24px;
+}
+.radio input[type=radio] {
+  display: none;
+}
+.radio input[type=radio]:checked ~ span::after {
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  scale: 1;
+}
+.radio span {
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  border: 2px solid #FF5A30;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 4px;
+}
+.radio span:after {
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: #FF5A30;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: 0.3s ease-in-out 0s;
+  transition: 0.3s ease-in-out 0s;
+}
 .radio__box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -710,10 +747,15 @@ body {
           align-items: center;
 }
 .radio__box input[type=radio] {
-  margin: 0 12px 0 0;
+  margin: 0 10px 0 0;
 }
 .radio__box label {
-  padding-right: 24px;
+  padding-right: 20px;
+  font-family: Ubuntu, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 25.6px;
+  cursor: pointer;
 }
 .radio__box label:last-child {
   padding-right: 0px;
